Fixed the twitter logo so it is no longer stretched, updated instagram logo to give it a transparent background. Changed logo size to prevent cutout

--- a/extension/public/popup.css
+++ b/extension/public/popup.css
@@ -98,8 +98,8 @@ h3 {
 }
 
 .sites .toggle-list .toggle-item img {
-  width: 36px;
-  height: 36px;
+  width: 32px;
+  height: 32px;
 }
 
 .sites button {
